laythe_vm/src/compiler/parser.rs
use crate::{
  ast::*,
  source::{LineOffsets, Source},
  token::{Lexeme, Token, TokenKind},
  FeResult,
};
use bumpalo::boxed::Box;
use codespan_reporting::diagnostic::{Diagnostic, Label};
use laythe_core::{constants::INIT, object::FunKind};
use std::mem;

use super::Scanner;

type ParseResult<T, F> = Result<T, Diagnostic<F>>;

fn to_fe_result<T, F>(result: ParseResult<T, F>) -> FeResult<T, F> {
  match result {
    Ok(res) => Ok(res),
    Err(err) => Err(vec![err]),
  }
}

enum BlockReturn {
  Can,
  Cannot,
}

const NUMBER_TYPE: &str = "number";
const BOOL_TYPE: &str = "bool";
const STRING_TYPE: &str = "string";
const ANY_TYPE: &str = "any";

/// The Laythe parser. This structure produces the Laythe
/// AST
pub struct Parser<'a, FileId> {
  /// The current token
  current: Token<'a>,

  /// The previous token
  previous: Token<'a>,

  /// The source
  source: &'a Source,

  /// All errors that have been during parsing
  errors: Vec<Diagnostic<FileId>>,

  /// Can we currently implicitly return
  block_return: BlockReturn,

  /// Current function kind
  fun_kind: FunKind,

  /// Current loop depth
  loop_depth: u16,

  /// Current scope depth
  scope_depth: u16,

  /// Struct for providing a stream of tokens
  scanner: Scanner<'a>,

  /// file id
  file_id: FileId,
}

impl<'a, FileId: Copy> Parser<'a, FileId> {
  /// Create a new instance of the parser from a source str
  pub fn new(source: &'a Source, file_id: FileId) -> Self {
    Self {
      scanner: Scanner::new(source),
      file_id,
      source,
      errors: vec![],
      fun_kind: FunKind::Script,
      block_return: BlockReturn::Cannot,
      scope_depth: 0,
      loop_depth: 0,
      previous: Token::new(TokenKind::Error, Lexeme::Slice("error"), 0, 0),
      current: Token::new(TokenKind::Error, Lexeme::Slice("error"), 0, 0),
    }
  }

  fn node<T>(&self, node: T) -> Box<'a, T> {
    self.source.node(node)
  }

  /// Parse the provide source string into a Laythe AST
  /// Return the top level module struct if successful
  ///
  /// # Examples
  /// ```
  /// use laythe_vm::{
  ///   compiler::Parser,
  ///   source::Source,
  /// };
  /// use laythe_native::stdio::StdioNative;
  /// use laythe_core::memory::{Allocator, NO_GC};
  ///
  /// // an expression
  /// let mut gc = Allocator::default();
  /// let source = Source::new(gc.manage_str("3 / 2 + 10;", &NO_GC));
  ///
  /// let parser = Parser::new(&source, 0);
  /// let (ast, _) = parser.parse();
  /// assert_eq!(ast.is_ok(), true);
  /// ```
  pub fn parse(mut self) -> (FeResult<Module<'a>, FileId>, LineOffsets) {
    (self.parse_inner(), self.scanner.line_offsets())
  }

  fn parse_inner(&mut self) -> FeResult<Module<'a>, FileId> {
    to_fe_result(self.advance())?;

    // early exit if ""
    if let TokenKind::Eof = self.current.kind() {
      return Ok(Module::default());
    }

    let mut decls = Vec::new();
    while !to_fe_result(self.match_kind(TokenKind::Eof))? {
      decls.push(to_fe_result(self.decl())?)
    }

    self
      .consume(TokenKind::Eof, "Expected end of expression.")
      .map_err(|err| vec![err])?;

    if self.errors.is_empty() {
      Ok(Module::new(decls))
    } else {
      Err(self.errors.clone())
    }
  }

  /// Parse a Laythe declaration, if an error occurred at a lower level attempt
  /// synchronize to provide more error messages
  fn decl(&mut self) -> ParseResult<Decl<'a>, FileId> {
    let decl = match self.current.kind() {
      TokenKind::Class => self
        .advance()
        .and_then(|()| self.class())
        .map(|class| Decl::Symbol(self.node(class))),
      TokenKind::Fun => self
        .advance()
        .and_then(|()| self.fun())
        .map(|fun| Decl::Symbol(self.node(fun))),
      TokenKind::Let => self
        .advance()
        .and_then(|()| self.let_())
        .map(|let_| Decl::Symbol(self.node(let_))),
      TokenKind::Trait => self
        .advance()
        .and_then(|()| self.trait_())
        .map(|trait_| Decl::Symbol(self.node(trait_))),
      TokenKind::Type => self
        .advance()
        .and_then(|()| self.type_decl())
        .map(|type_decl| Decl::Symbol(self.node(type_decl))),
      TokenKind::Export => self.advance().and_then(|()| self.export_declaration()),
      _ => self.stmt().map(|stmt| Decl::Stmt(self.node(stmt))),
    };

    decl.or_else(|error| self.synchronize(error))
  }

  /// Synchronize the parser to a sentinel token
  fn synchronize(&mut self, error: Diagnostic<FileId>) -> ParseResult<Decl<'a>, FileId> {
    self.errors.push(error);

    let mut tokens: Vec<Token> = vec![];

    while self.current.kind() != TokenKind::Eof || self.previous.kind() == TokenKind::Semicolon {
      tokens.push(self.previous.clone());

      match self.current.kind() {
        TokenKind::Class
        | TokenKind::Fun
        | TokenKind::Let
        | TokenKind::For
        | TokenKind::If
        | TokenKind::While
        | TokenKind::Return => {
          break;
        },
        _ => (),
      }

      self.advance()?;
    }

    Ok(Decl::Error(tokens.into_boxed_slice()))
  }

  /// Parse a statement
  fn stmt(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    match self.current.kind() {
      TokenKind::Import => self.advance().and_then(|()| self.import()),
      TokenKind::Try => self.advance().and_then(|()| self.try_block()),
      TokenKind::If => self.advance().and_then(|()| self.if_()),
      TokenKind::Launch => self.advance().and_then(|()| self.launch()),
      TokenKind::For => self.advance().and_then(|()| self.for_()),
      TokenKind::While => self.advance().and_then(|()| self.while_()),
      TokenKind::Return => self.advance().and_then(|()| self.return_()),
      TokenKind::Continue => self.advance().and_then(|()| self.continue_()),
      TokenKind::Break => self.advance().and_then(|()| self.break_()),
      _ => self.expr_stmt(),
    }
  }

  /// Parse an expression
  fn expr(&mut self) -> ParseResult<Expr<'a>, FileId> {
    self.parse_precedence(Precedence::Assignment)
  }

  /// Parse a class declaration
  fn class(&mut self) -> ParseResult<Symbol<'a>, FileId> {
    self.consume(TokenKind::Identifier, "Expected class name.")?;
    let name = self.previous.clone();

    let type_params = if self.match_kind(TokenKind::Less)? {
      self.type_params()?
    } else {
      vec![]
    };

    // see if this class inherits from another
    let super_class = if self.match_kind(TokenKind::Colon)? {
      self.consume(TokenKind::Identifier, "Expected superclass name.")?;
      let super_class = self.class_type()?;

      if name.str() == super_class.type_ref.name.str() {
        return self.error("A class cannot inherit from itself.");
      }

      Some(super_class)
    } else {
      None
    };

    // collect and categories all methods in the class
    self.consume_basic(TokenKind::LeftBrace, "Expected '{' before class body.")?;
    let mut type_members: Vec<TypeMember> = vec![];
    let mut methods: Vec<Fun> = vec![];
    let mut static_methods: Vec<Fun> = vec![];
    let mut init: Option<Fun> = None;
    let start = self.previous.start();

    while !self.check(TokenKind::RightBrace) && !self.check(TokenKind::Eof) {
      // We need to do a lookahead for ':' to determine
      // if we're looking a member or a method
      match self.current.kind() {
        // identifer may be method or member
        TokenKind::Identifier => {
          self.advance()?;
          let name = self.previous.clone();

          match self.current.kind() {
            TokenKind::Colon => {
              self.advance()?;
              let type_ = self.type_()?;
              self.consume_basic(
                TokenKind::Semicolon,
                "Expected ';' after class member declaration.",
              )?;
              type_members.push(TypeMember::new(name, type_));
            },
            _ => {
              let (fun_kind, method) = self.method(name, false)?;
              match fun_kind {
                FunKind::Method => methods.push(method),
                FunKind::Initializer => init = Some(method),
                _ => unreachable!(),
              }
            },
          }
        },

        // static we know must be a method
        TokenKind::Static => {
          self.advance()?;
          self.consume(
            TokenKind::Identifier,
            "Expected method name after 'static' keyword.",
          )?;
          let name = self.previous.clone();
          let (_, method) = self.method(name, true)?;
          static_methods.push(method);
        },
        _ => return self.error_current("Expected method or member declaration inside of class."),
      }
    }

    self.consume_basic(TokenKind::RightBrace, "Expected '}' after class body.")?;
    let end = self.previous.end();

    Ok(Symbol::Class(Class::new(
      name,
      Span { start, end },
      type_params,
      super_class,
      type_members,
      init,
      methods,
      static_methods,
    )))
  }

  /// Parse a function declaration
  fn fun(&mut self) -> ParseResult<Symbol<'a>, FileId> {
    let previous = mem::replace(&mut self.fun_kind, FunKind::Fun);

    self.consume(TokenKind::Identifier, "Expected function name.")?;
    let name = self.previous.clone();

    let type_params = if self.match_kind(TokenKind::Less)? {
      self.type_params()
    } else {
      Ok(vec![])
    }?;

    let fun = self
      .function(name, type_params, BlockReturn::Can)
      .map(Symbol::Fun);

    self.fun_kind = previous;
    fun
  }

  /// Parse a variable declaration
  fn let_(&mut self) -> ParseResult<Symbol<'a>, FileId> {
    self.consume(TokenKind::Identifier, "Expected variable name.")?;
    let name = self.previous.clone();

    let type_ = if self.match_kind(TokenKind::Colon)? {
      Some(self.type_()?)
    } else {
      None
    };

    let value = if self.match_kind(TokenKind::Equal)? {
      Some(self.expr()?)
    } else {
      None
    };

    self
      .consume_basic(
        TokenKind::Semicolon,
        "Expected ';' after variable declaration.",
      )
      .map(|()| Symbol::Let(Let::new(name, type_, value)))
  }

  /// Parse a trait declaration
  fn trait_(&mut self) -> ParseResult<Symbol<'a>, FileId> {
    self.consume(TokenKind::Identifier, "Expected trait name after 'trait'.")?;
    let name = self.previous.clone();

    let params = if self.match_kind(TokenKind::Less)? {
      self.type_params()
    } else {
      Ok(vec![])
    }?;

    self.consume_basic(TokenKind::LeftBrace, "Expected '{' after trait name.")?;

    let mut members: Vec<TypeMember> = vec![];
    let mut methods: Vec<TypeMethod> = vec![];

    while !self.check(TokenKind::RightBrace) && !self.check(TokenKind::Eof) {
      // We need to do a lookahead for ':' to determine
      // if we're looking a member or a method
      self.consume(
        TokenKind::Identifier,
        "Expected method or member declaration",
      )?;
      let name = self.previous.clone();

      match self.current.kind() {
        TokenKind::Colon => {
          self.advance()?;
          let type_ = self.type_()?;
          self.consume_basic(
            TokenKind::Semicolon,
            "Expected ';' after class member declaration.",
          )?;
          members.push(TypeMember::new(name, type_));
        },
        TokenKind::Less | TokenKind::LeftParen => {
          self.advance()?;
          let type_params = if self.match_kind(TokenKind::Less)? {
            self.type_params()?
          } else {
            vec![]
          };
          let call_sig = self.call_signature(TokenKind::RightParen, type_params)?;
          self.consume_basic(
            TokenKind::Semicolon,
            "Expected ';' after class member declaration.",
          )?;
          methods.push(TypeMethod::new(name, call_sig));
        },
        _ => self.error_at(
          self.current.clone(),
          "Expected member or method declaration inside trait.",
        )?,
      }
    }

    self.consume_basic(TokenKind::RightBrace, "Expected '}' after trait body.")?;

    let range = Span {
      start: name.start(),
      end: self.previous.end(),
    };
    Ok(Symbol::Trait(Trait::new(
      range, name, params, members, methods,
    )))
  }

  /// Parse a trait declaration
  fn type_decl(&mut self) -> ParseResult<Symbol<'a>, FileId> {
    self.consume(TokenKind::Identifier, "Expected type name after 'type'.")?;
    let name = self.previous.clone();

    let params = if self.match_kind(TokenKind::Less)? {
      self.type_params()
    } else {
      Ok(vec![])
    }?;

    self.consume_basic(TokenKind::Equal, "Expected '=' after type name.")?;

    let type_ = self.type_()?;
    self.consume_basic(TokenKind::Semicolon, "Expected ';' after type declaration.")?;

    Ok(Symbol::TypeDecl(TypeDecl::new(name, params, type_)))
  }

  /// Parse a symbol export declaration
  fn export_declaration(&mut self) -> ParseResult<Decl<'a>, FileId> {
    let symbol = match self.current.kind() {
      TokenKind::Class => self.advance().and_then(|()| self.class()),
      TokenKind::Fun => self.advance().and_then(|()| self.fun()),
      TokenKind::Let => self.advance().and_then(|()| self.let_()),
      TokenKind::Trait => self.advance().and_then(|()| self.trait_()),
      TokenKind::Type => self.advance().and_then(|()| self.type_decl()),
      _ => self.error_current("Can only export variable, function or class declarations."),
    }?;

    Ok(Decl::Export(self.node(symbol)))
  }

  /// Parse an import statement
  fn import(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    if self.scope_depth > 0 {
      return self.error_current("Can only import from the module scope.");
    }

    self.consume(
      TokenKind::Identifier,
      "Expected package name following import.",
    )?;
    let mut path = vec![self.previous.clone()];

    while self.match_kind(TokenKind::Dot)? {
      self.consume(TokenKind::Identifier, "Expect import path after '.'")?;
      path.push(self.previous.clone())
    }

    let stem = match self.current.kind() {
      TokenKind::Colon => self.advance().and_then(|()| {
        self.consume(TokenKind::LeftBrace, "Expected '{' after ':'.")?;
        let mut symbols = vec![];

        while !self.check(TokenKind::RightBrace) {
          self.consume(
            TokenKind::Identifier,
            "Expected symbol identifier in import.",
          )?;
          let symbol = self.previous.clone();

          if self.match_kind(TokenKind::As)? {
            self.consume(TokenKind::Identifier, "Expected identifier after 'as'.")?;
            symbols.push(ImportSymbol::new(symbol, Some(self.previous.clone())))
          } else {
            symbols.push(ImportSymbol::new(symbol, None))
          }

          if !self.match_kind(TokenKind::Comma)? {
            break;
          }
        }

        self.consume(
          TokenKind::RightBrace,
          "Expected '}' following import symbols",
        )?;
        Ok(ImportStem::Symbols(symbols))
      }),
      TokenKind::As => self.advance().and_then(|()| {
        self.consume(TokenKind::Identifier, "Expected identifier after 'as'.")?;
        Ok(ImportStem::Rename(self.previous.clone()))
      }),
      _ => Ok(ImportStem::None),
    }?;

    self
      .consume_basic(TokenKind::Semicolon, "Expected ';' after value.")
      .map(|()| Stmt::Import(self.node(Import::new(path, stem))))
  }

  /// Parse a try catch block
  fn try_block(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    let block = self
      .consume(TokenKind::LeftBrace, "Expected '{' after try.")
      .and_then(|()| self.block(BlockReturn::Cannot))?;

    self
      .consume(TokenKind::Catch, "Expected 'catch' after try block.")
      .and_then(|()| self.consume_basic(TokenKind::LeftBrace, "Expected '{' after catch."))
      .and_then(|()| self.block(BlockReturn::Cannot))
      .map(|catch| Stmt::Try(self.node(Try::new(block, catch))))
  }

  /// Parse a launch statement
  fn launch(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    let closure = self.expr()?;

    if let Expr::Atom(atom) = &closure {
      match atom.trailers.last() {
        Some(Trailer::Call(_)) => {
          self.consume_basic(TokenKind::Semicolon, "Expected ';' launch call.")?;
          Ok(Stmt::Launch(self.node(Launch::new(closure))))
        },
        _ => self.error("Expected call following 'launch'."),
      }
    } else {
      self.error("Expected call following 'launch'.")
    }
  }

  /// Parse a if statement
  fn if_(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    // parse the condition
    let cond = self.expr()?;
    self.consume_basic(TokenKind::LeftBrace, "Expected '{' after condition.")?;

    // parse then branch
    let body = self.block(BlockReturn::Cannot)?;

    // parse else branch if it exists
    let else_body = if self.match_kind(TokenKind::Else)? {
      if self.match_kind(TokenKind::LeftBrace)? {
        Some(Else::Block(self.block(BlockReturn::Cannot)?))
      } else if self.match_kind(TokenKind::If)? {
        if let Stmt::If(if_) = self.if_()? {
          Some(Else::If(if_))
        } else {
          unreachable!()
        }
      } else {
        return self.error_current("Expected 'if' or block following else.");
      }
    } else {
      None
    };

    Ok(Stmt::If(self.node(If::new(cond, body, else_body))))
  }

  /// Increment the loop depth
  fn loop_<T>(&mut self, cb: impl FnOnce(&mut Self) -> T) -> T {
    self.loop_depth += 1;
    let result = cb(self);
    self.loop_depth -= 1;
    result
  }

  /// Parse a for loop
  fn for_(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    self.loop_(|self_| {
      self_.consume(TokenKind::Identifier, "Expected identifer after 'for'.")?;
      let item = self_.previous.clone();

      self_.consume(TokenKind::In, "Expected 'in' following for loop variable.")?;
      let iter = self_.expr()?;

      self_
        .consume(TokenKind::LeftBrace, "Expected '{' after iterable.")
        .and_then(|()| self_.block(BlockReturn::Cannot))
        .map(|body| Stmt::For(self_.node(For::new(item, iter, body))))
    })
  }

  /// Parse while statement
  fn while_(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    self.loop_(|self_| {
      let cond = self_.expr()?;
      self_.consume(TokenKind::LeftBrace, "Expected '{' after while condition.")?;

      let body = self_.block(BlockReturn::Cannot)?;
      Ok(Stmt::While(self_.node(While::new(cond, body))))
    })
  }

  /// Parse a return statement
  fn return_(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    if let FunKind::Script = self.fun_kind {
      return self.error("Cannot return from outside of a function or method.");
    }

    let return_ = self.previous.clone();
    if self.match_kind(TokenKind::Semicolon)? {
      Ok(Stmt::Return(self.node(Return::new(return_, None))))
    } else {
      let expr = self.expr()?;
      let result = self
        .consume_basic(TokenKind::Semicolon, "Expected ';' after return value.")
        .map(|()| Stmt::Return(self.node(Return::new(return_, Some(expr)))));

      if let FunKind::Initializer = self.fun_kind {
        self.error("Cannot return from outside of a function or method.")
      } else {
        result
      }
    }
  }

  fn continue_(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    if self.loop_depth == 0 {
      return self.error("Cannot continue from outside of a loop.");
    }

    let continue_ = self.previous.clone();
    self.consume_basic(TokenKind::Semicolon, "Expected ';' after continue.")?;
    Ok(Stmt::Continue(self.node(continue_)))
  }

  fn break_(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    if self.loop_depth == 0 {
      return self.error("Cannot break from outside of a loop.");
    }

    let break_ = self.previous.clone();
    self.consume_basic(TokenKind::Semicolon, "Expected ';' after break.")?;
    Ok(Stmt::Break(self.node(break_)))
  }

  /// Parse an expression statement
  fn expr_stmt(&mut self) -> ParseResult<Stmt<'a>, FileId> {
    let expr = self.expr()?;
    if self.match_kind(TokenKind::Semicolon)? {
      Ok(Stmt::Expr(self.node(expr)))
    } else {
      if let BlockReturn::Cannot = self.block_return {
        return self.error("Expected ';' after expression");
      }

      Ok(Stmt::ImplicitReturn(self.node(expr)))
    }
  }

  /// Parse an expression using a Pratt parser
  fn parse_precedence(&mut self, precedence: Precedence) -> ParseResult<Expr<'a>, FileId> {
    self.advance()?;

    let can_assign = precedence <= Precedence::Assignment;
    let prefix_fn = get_prefix(self.previous.kind()).op;

    // apply some prefix action
    let mut expr = match prefix_fn {
      Some(prefix) => self.prefix(prefix, can_assign),
      None => return self.error("Expected expression."),
    }?;

    // while we still have binding power keep applying infix operations
    while precedence <= get_infix(self.current.kind()).precedence {
      self.advance()?;
      let infix_fn = get_infix(self.previous.kind()).op;

      expr = match infix_fn {
        Some(infix) => self.infix(infix, expr, can_assign),
        None => return self.error("Expected expression."),
      }?;
    }

    // provide error if we failed to assign at some point
    if can_assign && self.match_kind(TokenKind::Equal)? {
      return self.error("Invalid assignment target.");
    }

    Ok(expr)
  }

  /// Execute an prefix action
  fn prefix(&mut self, action: Prefix, can_assign: bool) -> ParseResult<Expr<'a>, FileId> {
    match action {
      Prefix::AssignBlock => self.assign_block(),
      Prefix::Channel => self.channel(),
      Prefix::Grouping => self.grouping(),
      Prefix::Interpolation => self.interpolation(),
      Prefix::Lambda => self.lambda(),
      Prefix::List => self.list(),
      Prefix::Literal => Ok(self.literal()),
      Prefix::Map => self.map(),
      Prefix::Number => Ok(self.number()),
      Prefix::Self_ => Ok(self.self_()),
      Prefix::String => Ok(self.string()),
      Prefix::Super => self.super_(),
      Prefix::Unary => self.unary(),
      Prefix::Variable => self.variable(can_assign),
    }
  }

  /// Execute an infix action
  fn infix(
    &mut self,
    action: Infix,
    lhs: Expr<'a>,
    can_assign: bool,
  ) -> ParseResult<Expr<'a>, FileId> {
    match action {
      Infix::And => self.and(lhs),
      Infix::Binary => self.binary(lhs),
      Infix::Call => self.call(lhs),
      Infix::Index => self.index(lhs, can_assign),
      Infix::Dot => self.dot(lhs, can_assign),
      Infix::Or => self.or(lhs),
    }
  }

  /// Parse an assignment block
  fn assign_block(&mut self) -> ParseResult<Expr<'a>, FileId> {
    self.consume_basic(
      TokenKind::LeftBrace,
      "Expected '{' after assignment block ':'",
    )?;
    let block = self.block(BlockReturn::Cannot)?;
    Ok(self.atom(Primary::AssignBlock(block)))
  }

  /// Parse a block statement
  fn block(&mut self, block_return: BlockReturn) -> ParseResult<Block<'a>, FileId> {
    let start = self.previous.start();

    self.scope_depth += 1;
    let block_return = mem::replace(&mut self.block_return, block_return);

    let mut decls: Vec<Decl> = vec![];
    while !self.check(TokenKind::RightBrace) && !self.check(TokenKind::Eof) {
      decls.push(self.decl().map_err(|err| {
        self.scope_depth -= 1;
        err
      })?);
    }

    if let BlockReturn::Can = self.block_return {
      if let Some((_, rest)) = decls.split_last() {
        for decl in rest {
          if let Decl::Stmt(stmt) = decl {
            if let Stmt::ImplicitReturn(return_) = &**stmt {
              return self.error_at::<Block<'a>>(
                Token::new(
                  TokenKind::Error,
                  Lexeme::Slice(""),
                  return_.start(),
                  return_.end(),
                ),
                "Implicit return can only appear at the end of a block.",
              );
            }
          }
        }
      }
    }

    self.scope_depth -= 1;
    self.block_return = block_return;

    let end = self.current.end();

    self
      .consume(TokenKind::RightBrace, "Expected '}' after block.")
      .map(|()| Block::new(Span { start, end }, decls))
  }

  /// Parse a binary expression
  fn binary(&mut self, lhs: Expr<'a>) -> ParseResult<Expr<'a>, FileId> {
    let operator_kind = self.previous.kind();
    let precedence = get_infix(operator_kind).precedence.higher();
    let rhs = self.parse_precedence(precedence)?;

    let op = match operator_kind {
      TokenKind::BangEqual => BinaryOp::Ne,
      TokenKind::EqualEqual => BinaryOp::Eq,
      TokenKind::Greater => BinaryOp::Gt,
      TokenKind::GreaterEqual => BinaryOp::GtEq,
      TokenKind::Less => BinaryOp::Lt,
      TokenKind::LessEqual => BinaryOp::LtEq,
      TokenKind::Plus => BinaryOp::Add,
      TokenKind::Minus => BinaryOp::Sub,
      TokenKind::Star => BinaryOp::Mul,
      TokenKind::Slash => BinaryOp::Div,
      _ => unreachable!("Invalid operator"),
    };

    Ok(Expr::Binary(self.node(Binary::new(op, lhs, rhs))))
  }

  /// Parse an and expression
  fn and(&mut self, lhs: Expr<'a>) -> ParseResult<Expr<'a>, FileId> {
    let rhs = self.parse_precedence(Precedence::And)?;
    Ok(Expr::Binary(self.node(Binary::new(
      BinaryOp::And,
      lhs,
      rhs,
    ))))
  }

  /// Parse an or expression
  fn or(&mut self, lhs: Expr<'a>) -> ParseResult<Expr<'a>, FileId> {
    let rhs = self.parse_precedence(Precedence::Or)?;
    Ok(Expr::Binary(self.node(Binary::new(BinaryOp::Or, lhs, rhs))))
  }

  /// Parse a unary expression
  fn unary(&mut self) -> ParseResult<Expr<'a>, FileId> {
    let operator_kind = self.previous.kind();
    let expr = self.parse_precedence(Precedence::Unary)?;

    let op = match operator_kind {
      TokenKind::Minus => UnaryOp::Negate,
      TokenKind::Bang => UnaryOp::Not,
      TokenKind::LeftArrow => UnaryOp::Receive,
      _ => unimplemented!("Unexpected unary operator"),
    };

    Ok(Expr::Unary(self.node(Unary::new(op, expr))))
  }

  /// Parse a call invocation
  fn call(&mut self, mut lhs: Expr<'a>) -> ParseResult<Expr<'a>, FileId> {
    let start = self.previous.start();
    let args = self.consume_arguments(TokenKind::RightParen, std::u8::MAX as usize)?;
    self.consume_basic(TokenKind::RightParen, "Expected ')' after arguments")?;

    let range = Span {
      start,
      end: self.previous.end(),
    };

    if let Expr::Atom(atom) = &mut lhs {
      atom
        .trailers
        .push(Trailer::Call(self.node(Call::new(range, args))))
    } else {
      return self.error("Expected expression. TODO can you get here?");
    }

    Ok(lhs)
  }

  /// Parse an index on an atom
  fn index(&mut self, mut expr: Expr<'a>, can_assign: bool) -> ParseResult<Expr<'a>, FileId> {
    let indexer = self.expr()?;
    self.consume_basic(TokenKind::RightBracket, "Expected ']' after index")?;

    if let Expr::Atom(atom) = &mut expr {
      atom
        .trailers
        .push(Trailer::Index(self.node(Index::new(indexer))))
    } else {
      return self.error("Expected expression. TODO can you get here?");
    }

    if can_assign {
      expr = self.assign(expr)?;
    }

    Ok(expr)
  }

  /// Parse a property access
  fn dot(&mut self, mut expr: Expr<'a>, can_assign: bool) -> ParseResult<Expr<'a>, FileId> {
    self.consume(TokenKind::Identifier, "Expected property name after '.'.")?;

    if let Expr::Atom(atom) = &mut expr {
      atom.trailers.push(Trailer::Access(
        self.node(Access::new(self.previous.clone())),
      ))
    } else {
      return self.error("Expected expression. TODO can you get here?");
    }

    if can_assign {
      expr = self.assign(expr)?;
    }

    Ok(expr)
  }

  /// Parse a lambda expression
  fn lambda(&mut self) -> ParseResult<Expr<'a>, FileId> {
    // parse function parameters
    let call_sig = self.call_signature(TokenKind::Pipe, vec![])?;

    let previous = mem::replace(&mut self.fun_kind, FunKind::Fun);
    let lambda = self
      .fun_body(BlockReturn::Can)
      .map(|body| self.atom(Primary::Lambda(self.node(Fun::new(None, call_sig, body)))));

    self.fun_kind = previous;
    lambda
  }

  fn channel(&mut self) -> ParseResult<Expr<'a>, FileId> {
    let start = self.previous.start();
    self.consume_basic(TokenKind::LeftParen, "Expected '(' after 'chan'")?;

    let mut expr = None;
    if !self.match_kind(TokenKind::RightParen)? {
      expr = Some(self.expr()?);
      self.consume_basic(TokenKind::RightParen, "Expected ')'")?;
    }

    let span = Span {
      start,
      end: self.previous.end(),
    };

    Ok(self.atom(Primary::Channel(Channel::new(span, expr))))
  }

  /// Parse a grouping expression
  fn grouping(&mut self) -> ParseResult<Expr<'a>, FileId> {
    let expr = self.expr()?;
    self.consume_basic(TokenKind::RightParen, "Expected ')' after expression")?;

    Ok(self.atom(Primary::Grouping(self.node(expr))))
  }

  /// Compile a variable statement
  fn variable(&mut self, can_assign: bool) -> ParseResult<Expr<'a>, FileId> {
    let mut expr = self.atom(Primary::Ident(self.previous.clone()));

    if can_assign {
      expr = self.assign(expr)?;
    }

    Ok(expr)
  }

  /// Parse a class's self identifier
  fn self_(&mut self) -> Expr<'a> {
    self.atom(Primary::Self_(self.previous.clone()))
  }

  /// Parse a class' super identifer
  fn super_(&mut self) -> ParseResult<Expr<'a>, FileId> {
    let super_ = self.previous.clone();
    self.consume_basic(TokenKind::Dot, "Expected '.' after super.")?;
    self.consume(TokenKind::Identifier, "Expected identifier after '.'.")?;
